[package]
name = "kstream"
version = "0.1.0"
authors = ["Michal Hornicky <mhornick@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
env_logger = "*"

[dependencies]
log = "*"
rdkafka = "*"
serde = "*"
bytes = {version = "*", features = ["serde"]}
serde_json = "*"
async-trait = "*"
futures = "*"
tokio = {version ="0.2.20", features = ["full", "rt-core", "time"] }